# health_benefits_explainer

./: .gitignore  Insurance_Policy_Explainer_Project_Roadmap.docx  LOOM  README.md  agent.py  lib.py  main.py  pyproject.toml  requirements.txt  tools.py  vercel.json
eval/: README.md  __init__.py  eval.py
notebooks/: Health Insurance Policy Explainer.ipynb
rag/: __init__.py  loaders.py  pipeline.py  retrievers.py  splitters.py  vectorstores.py
scripts/: local_chat.py
static/: index.html
