[project]
name = "certification-challenge"
version = "0.1.0"
description = "Agentic RAG Health Insurance Policy Explainer (Vercel deployable)"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.6.1",
    "fastapi>=0.135.1",
    "langchain",
    "langchain-cohere>=0.5.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.16",
    "langchain-experimental>=0.4.1",
    "langchain-openai>=1.1.10",
    "langchain-qdrant>=1.1.0",
    "langchain-text-splitters>=1.1.1",
    "langgraph>=1.0.10",
    "langsmith>=0.7.9",
    "pydantic>=2.12.5",
    "pypdf>=6.7.5",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.17.0",
    "ragas>=0.4.3",
    "rank-bm25>=0.2.2",
    "rapidfuzz",
    "tavily-python>=0.7.22",
    "uvicorn>=0.41.0",
]

[tool.uv]
dev-dependencies = ["ruff", "pytest"]
