[project]
name = "certification-challenge"
version = "0.1.0"
description = "Agentic RAG Health Insurance Policy Explainer (Vercel deployable)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.16",
    "langchain-openai>=1.1.10",
    "langchain-text-splitters>=1.1.1",
    "langgraph>=1.0.10",
    "pydantic>=2.12.5",
    "pypdf>=6.7.5",
    "python-dotenv>=1.2.2",
    "tavily-python>=0.7.22",
    "uvicorn>=0.41.0",
]

[tool.uv]
dev-dependencies = ["ruff", "pytest"]
